--- a/languages/css/basico/index.html
+++ b/languages/css/basico/index.html
@@ -65,7 +65,7 @@
             <nav>
                 <a href="./intro.html">CSS Intro</a>
                 <a href="./1-anatomia.html">Anatomia CSS</a>
-                <a href="./origem.html">Origem</a>
+                <a href="./2-origem.html">Origem</a>
                 <a href="./classeTag.html">Criando Classe <strong>.tag</strong></a>
                 <a href="./seletores.html">Seletores</a>
                 <a href="./especificidade1.html">Especificidade CSS #01</a>
