--- a/languages/html/index.html
+++ b/languages/html/index.html
@@ -3,32 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Exercícios HTML</title>
+    <style>
+        #conteudo {
+            padding: 30px 0px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Exercícios HTML</h1>
     </header>
     <nav>
-        <a href="exercicios/1-test.html">00 - Teste</a>
+        <a href wm-nav="exercicios/teste.html">00 - Teste</a> |
+        <a href wm-nav="exercicios/texto1.html">01 - Texto 1</a> |
+        <a href wm-nav="exercicios/texto2.html">02 - Texto 2</a> |
+        <a href wm-nav="exercicios/listas.html">03 - Listas</a> |
+        <a href wm-nav="exercicios/listaAninhada.html">04 - Lista Aninhada</a> |
+        <a href wm-nav="exercicios/links.html">05 - Links</a> |
+        <a href wm-nav="exercicios/tabela.html">06 - Tabela</a> |
+        <a href wm-nav="exercicios/form/form.html">07 - Formulário</a> |
+        <a href wm-nav="exercicios/imagens.html">08 - Imagens</a> |
+        <a href wm-nav="exercicios/video.html">09 - Vídeo</a> |
+        <a href wm-nav="exercicios/tagsNaoVisuais.html">10 - Tags Não Visuais</a> |
     </nav>
     <section id="conteudo"></section>
     <footer>
-        <br>
-        Curso HTML - Web Moderno
+        Curso de Web Moderno
     </footer>
-
     <script>
-        // document.querySelectorAll('[some-attr]').forEach(link => {
-        document.querySelectorAll('a').forEach(link => {
-            const content = document.getElementById('conteudo')
-            link.onclick = (e) => {
-                e.preventDefault();
-
-                // fetch(link.getAttribute('[some-attr]'))
-                fetch(link.href)
-                    .then(res => res.text())
-                    .then(html => content.innerHTML = html)
+        document.querySelectorAll('[wm-nav]').forEach(link => {
+            const conteudo = document.getElementById('conteudo')
+            
+            link.onclick = function(e) {
+                e.preventDefault()
+                fetch(link.getAttribute('wm-nav'))
+                    .then(resp => resp.text())
+                    .then(html => conteudo.innerHTML = html)
             }
         })
     </script>
