angular: WIP the basics project.

--- a/languages/html/exercicios/form/form.html
+++ b/languages/html/exercicios/form/form.html
@@ -1,6 +1,7 @@
 <h1>Formulário</h1>
 
 <form method="POST">
+    <!-- name attribute is the backend identifier -->
     <input type="hidden" name="id" value="3">
     <input type="text" name="name">
     <input type="password" name="senha">
